unreferenced_files_lib/src/tests/multiple_searching/snapshots/unreferenced_files_lib__tests__multiple_searching__found.snap
---
source: unreferenced_files_lib/src/tests/multiple_searching/mod.rs
assertion_line: 25
expression: sorted_search_for

---
[]
