unreferenced_files_lib/src/tests/multiple_searching/snapshots/unreferenced_files_lib__tests__multiple_searching__not_found.snap
---
source: unreferenced_files_lib/src/tests/multiple_searching/mod.rs
assertion_line: 46
expression: sorted_search_for

---
[
    FilePathVariants {
        file_canonicalize_path: "/tmp/folder/file1.txt",
        file_relative_path: "./folder/file1.txt",
        file_name: "file1.txt",
        file_stem: "file1",
    },
]
